--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
   
   
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-              url("/picture's/ezgif-frame-001.jpg"); 
+              url("picture's/ezgif-frame-001.jpg"); 
   background-size: cover;
   background-position: center;
 }
